nlb/ingress-nginx/6.ingress-https-magedu_multi-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-https
  namespace: myserver
  annotations:
    kubernetes.io/ingress.class: "nginx" ##指定Ingress Controller的类型
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - www.myserver.com
    secretName: tls-secret-www
  - hosts:
    - mobile.myserver.com
    secretName: tls-secret-mobile 
  rules:
  - host: www.myserver.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myserver-tomcat-app1-service
          servicePort: 8080
  - host: mobile.myserver.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myserver-tomcat-app2-service
          servicePort: 8080
